--- a/Assets_Outer/css/style.css
+++ b/Assets_Outer/css/style.css
@@ -72,6 +72,11 @@ img {
     width: 100%;
 }
 
+#logoimg
+{    
+        width: 40%;    
+}
+
 a:hover {
     color: #fff;
     text-decoration: none;
